--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redux-rest-hooks",
   "version": "1.0.0",
-  "description": "Declarative API fetching using hooks and redux",
+  "description": "Declarative REST API fetching using React Hooks and Redux",
   "author": "Andrii Holovko andrii.holovko.dev@gmail.com",
   "license": "MIT",
   "repository": "andrii-holovko-dev/redux-rest-hooks",
