--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-rest-hooks",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Declarative REST API fetching using React Hooks and Redux",
   "author": "Andrii Holovko andrii.holovko.dev@gmail.com",
   "license": "MIT",
@@ -24,18 +24,20 @@
     "react": "^16.8.0"
   },
   "dependencies": {
+    "react-redux": "^7.2.0",
+    "lodash": "^4.17.15"
+  },
+  "devDependencies": {
     "cross-env": "^7.0.2",
     "gh-pages": "^2.2.0",
-    "lodash": "^4.17.15",
     "microbundle-crl": "^0.13.8",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "redux-saga": "^1.1.3"
   },
   "files": [
     "dist"
